more spacing, some bib fixes

--- a/_sass/_ed.scss
+++ b/_sass/_ed.scss
@@ -38,7 +38,7 @@ body {
 html {
   font-family: $main-font;
   font-size: 10px;
-  line-height: 1.3rem;
+  line-height: 1.5rem;
 }
 
 @media (min-width: 38em) {
